# agentforce-md

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  sfdx-project.json
notes/: 01-project-overview.md  02-agent-script-reference.md  03-claude-code-conventions.md  04-mapping-analysis.md  05-agent-script-dsl-reference.md  06-revised-mapping.md  07-hooks-to-agent-script.md
scripts/: cli.py  convert.py  discover.py  local_run.py  org_describe.py  scaffold.py
scripts/deploy/: sf_cli.py
scripts/generator/: agent_script.py  apex_stub.py  apex_test_stub.py  bundle_meta.py  flow_xml.py  permission_set_xml.py  writer.py
scripts/ir/: defaults.py  models.py  naming.py  validate.py
scripts/parser/: claude_md.py  frontmatter.py  markdown_utils.py  skill_md.py  subagent.py
templates/hello-world/: CLAUDE.md
templates/lennar-home-search/: CLAUDE.md
templates/multi-topic/: CLAUDE.md
tests/: conftest.py  test_cli.py  test_convert_e2e.py  test_convert_unit.py  test_deploy.py  test_discover.py  test_generator_agent_script.py  test_generator_apex_stub.py  test_generator_apex_test_stub.py  test_generator_bundle_meta.py  test_generator_flow_xml.py  test_generator_permission_set_xml.py  test_generator_writer.py  test_ir_defaults.py  test_ir_validate.py  test_local_run.py  test_naming.py  test_org_describe.py  test_parser_claude_md.py  test_parser_frontmatter.py  test_parser_markdown_utils.py  test_parser_skill_md.py  test_parser_subagent.py  test_scaffold.py  test_skill_migrate.py  test_skill_migrate_e2e.py
tools/: install.py  install.sh
webapp/: app.py
(+32 files in other folders)
